--- a/field.tex
+++ b/field.tex
@@ -105,7 +105,7 @@ SECM experiments were carried out using a homemade instrument operated with cust
 
 \section{Results and discussion}
 
-A series of consecutive Z-approach curves were recorded above the corroding AZ63 sample (as shown in fig. \ref{fig:approach}A). The first 6 measurements were taken while the AZ63 sample was not electrically connected to the iron sample (red lines). As expected, Mg$^{2+}$ activity slowly increased with time as a result of spontaneous corrosion. The overall change was about 10 mV in 5 minutes. Next, the two metals were connected at the rear of the mould. As result of establishing the galvanic connection, there was an immediate rise of about 40 mV in the measured potential of the microelectrode (that is depicted by the transition from the red to the blue curves in fig. \ref{fig:approach}A). Since the galvanic coupling was established while the scanning tip was located 1000 $\upmu$m from the AZ63 sample, the reported change cannot possibly be attributed solely to an abrupt increase in Mg$^{2+}$ activity. Indeed, such a 40 mV change would correspond to an increase of ca. 1.5 orders of magnitude in Mg$^{2+}$ activity occuring in less than one second. Immediately after, six additional Z-approach curves were recorded during the galvanic coupling. The resulting accelerated dissolution of Mg$^{2+}$ can be distinguished from the blue curves in fig. \ref{fig:approach}A. Intense gas evolution could be observed on the surface of the AZ63 sample, which explains the noticeably more noisy curves recorded in this case. During this period of galvanic coupling, the potential sensed at the ISME, when situated at h = 1000 $\upmu$m, increased in app. 40 mV. This rise can be totally attributed to the increase in activity of the dissolving metal, i.e.: $\Delta E = 29.5 mV \times \Delta lg[$Mg$^{2+}]$. Finally, when the galvanic connection was stopped, 2 additional Z-approach curves were measured (green curves in fig. \ref{fig:approach}A). A sudden jump in potential (transition from blue to green curves) can be observed, of the same magnitude as before, though in the opposite direction, as a result of electric field vanishing. The shape of the latest Z-approach curves is very similar to the initial few approaching curves, only they are shifted by about 40 mV to the positive direction. This is the result of the accelerated corrosion during the second phase; Mg$^{2+}$ activity changed by about the same factor throughout the length of the scanline. The shape of the curves recorded during the galvanic coupling are noticeabyl different that those recorded during the homogeneous corrosion. This is because the contribution of the electric field, just like the contribution from Mg$^{+2}$, is not uniform at different distances on the scanned line. The strength of the electric field is inversely proportional to the square of the distance. The shape of the function 1/$z^2$ is recognizable in these curves.
+A series of consecutive Z-approach curves were recorded above the corroding AZ63 sample (as shown in fig. \ref{fig:approach}A). The first 6 measurements were taken while the AZ63 sample was not electrically connected to the iron sample (red lines). As expected, Mg$^{2+}$ activity slowly increased with time as a result of spontaneous corrosion. The overall change was about 10 mV in 5 minutes. Next, the two metals were connected at the rear of the mould. As result of establishing the galvanic connection, there was an immediate rise of about 40 mV in the measured potential of the microelectrode (that is depicted by the transition from the red to the blue curves in fig. \ref{fig:approach}A). Since the galvanic coupling was established while the scanning tip was located 1000 $\upmu$m from the AZ63 sample, the reported change cannot possibly be attributed solely to an abrupt increase in Mg$^{2+}$ activity. Indeed, such a 40 mV change would correspond to an increase of ca. 1.5 orders of magnitude in Mg$^{2+}$ activity occuring in less than one second. Immediately after, six additional Z-approach curves were recorded during the galvanic coupling. The resulting accelerated dissolution of Mg$^{2+}$ can be distinguished from the blue curves in fig. \ref{fig:approach}A. Intense gas evolution could be observed on the surface of the AZ63 sample, which explains the noticeably more noisy curves recorded in this case. During this period of galvanic coupling, the potential sensed at the ISME, when situated at h = 1000 $\upmu$m, increased in app. 40 mV. This rise can be totally attributed to the increase in activity of the dissolving metal, i.e.: $\Delta E = 29.5 mV \times \Delta lg[$Mg$^{2+}]$. Finally, when the galvanic connection was stopped, 2 additional Z-approach curves were measured (green curves in fig. \ref{fig:approach}A). A sudden jump in potential (transition from blue to green curves) can be observed, of the same magnitude as before, though in the opposite direction, as a result of electric field vanishing. The shape of the latest Z-approach curves is very similar to the initial approaching curves recorded before galvanic connection was established, though they are shifted by about 40 mV in the positive direction. This is the result of the enhanced corrosion during the second phase of the experiment; Mg$^{2+}$ activity changed by about the same factor along the length of the scan-line. The shape of the Z-approach curves recorded during the galvanic coupling is notoriously different from those recorded during the spontaneous corrosion of the metal. This is because the contribution of the electric field, just like the contribution from Mg$^{+2}$, is not uniform at different distances on the scanned line. The strength of the electric field is inversely proportional to the square of the distance. The shape of the function 1/$z^2$ is recognizable from these plots.
 
 \begin{figure}
 \centering
@@ -160,17 +160,17 @@ A series of consecutive Z-approach curves were recorded above the corroding AZ63
 %\addlegendentry{$E = - 280 + 97 (e^{-t/9} + e^{-t/0.5577})/2$}
 \end{axis}
 \end{tikzpicture}
-\caption{(A) Consecutive vertical approach curves above the center of the AZ63 target with a Mg$^{2+}$ ISME. Step size was 10 $\upmu$m. 500 ms settling time was allowed for the potentiometric cell at each points before measurements. Lines in chronological order: solid red = homogeneous corrosion, dashed blue = galvanic corrosion, dashdotted green = homogeneous corrosion. (B) Stationary recordings; red = 100 $\upmu$m, blue = 1000 $\upmu$m above the center of the AZ63 target. On/off notes when galvanic coupling was established or severed. Temporal resolution was 1 Hz.}
+\caption{(A) Sequence of consecutive Z-approach curves recorded above the center of the AZ63 wire with a Mg$^{2+}$ ISME. Step size: 10 $\upmu$m. 500 ms settling time was allowed for the potentiometric cell at each points before measurements. Lines in chronological order: solid red = spontaneous corrosion, dashed blue = galvanic corrosion, dash dotted green = spontaneous corrosion. (B) Stationary recordings above the center of the AZ63 target with the ISME placed at: red = 100 $\upmu$m, blue = 1000 $\upmu$m distance from the metal. On/off denote the moment when galvanic coupling was either established or ceased. Temporal resolution was 1 Hz.}
 \label{fig:approach}
 \end{figure}
 
 
 
-Next, the potential was recorded at a constant height as a function of time, while the galvanic connection was manipulated between the two metals (fig. \ref{fig:approach}B). The tip was first positioned 100 $\upmu$m above the center of the target (red curve in fig. \ref{fig:approach}B), and for about 300 s the homogeneous corrosion of the AZ63 sample was recorded. Then, the galvanic connection was established, and a sharp increase in potential of about 70 mV could be observed. This change would mean a two orders of magnitude increase of Mg$^{2+}$ in a very short period of time. When the galvnic connection was severed, change with the same magnitude, but reversed direction could be observed. To rule out the possibility that this rise can be explained by the abrupt release of Mg$^{2+}$ from the surface, the experiment was repeated while the tip was positioned 1000 $\upmu$m above the target (blue curve in fig. \ref{fig:approach}B). A very similar sequence of potential changes could be observed. Even if one argues a change in Mg$^{2+}$ activity of more than two orders of magnitude is possible 100 $\upmu$m away the source in less then a second, it cannot be the case 1000 $\upmu$m from it. The only plausable explanation is that sudden change is due to the electric field formed between the two metals. 
+In another series of experiments, the ISME was maintained at a constant height from the metal surface, and its potential was recorded as a function of time, while the galvanic connection was established between the two metals by the operator (fig. \ref{fig:approach}B). Thus, the tip was first positioned 100 $\upmu$m above the center of the AZ63 wire (red curve in fig. \ref{fig:approach}B), and for about 300 s the spontaneous corrosion of the alloy sample was recorded. Then, the galvanic connection was established, and a sharp increase in potential of about 70 mV could be observed. This change would correspond to a two orders of magnitude increase of Mg$^{2+}$ activity in a very short period of time. When the galvnic connection was removed, a potential change of the same magnitude, though opposite direction could be observed. In order to discard the possibility that this rise could be still explained by an abrupt release of Mg$^{2+}$ from the surface, the experiment was repeated while the tip was positioned 1000 $\upmu$m above the target (blue curve in fig. \ref{fig:approach}B). A very similar sequence of potential changes could be observed, despite the big separation between the probe and the corroding sample. Even if one argues a change in Mg$^{2+}$ activity of more than two orders of magnitude is possible 100 $\upmu$m away the source in less then a second, it cannot be the case 1000 $\upmu$m from it. The only plausible explanation is that the abrupt change in the recorded potential is due to the electric field developed between the two metals. 
 
-Finally, in order to demonstrate the influence of the electric field on the SECM measurements 2D images were recorded at constant 100 $\upmu$m tip-sample disctance after 30 minutes coupling. 
-Then the galvanic connection was severed and immediately another 2D scan was performed above the Mg disk. The two images can be seen in \ref{fig:2d}. Apparently, in case of galvanic coupling 0.1 M Mg$^{2+}$ activity can be detected even in the bulk of the solution, whereas above the center of the disk the activity approaches the implausible 10$^{4}$ M value using the calibration curve for calculation.   
-In fig. \ref{fig:2d}B the measured values are in the linear range of the ISME and total change is orders of magnitude less than in fig. \ref{fig:2d}A. It has to be mentioned, that during the second scan the lack of electric connection of the galvanic couple and the diffusion of the Mg$^{2+}$ ions can introduce incertainities in the evaluation of the image, yet does not lead to such impossible misinterpretation as fig. \ref{fig:2d}A.
+Finally, in order to demonstrate the influence of the electric field on SECM imaging, measurements were made after 30 minutes of galvanic coupling by using a constant 100 $\upmu$m tip-sample distance. 
+Then the galvanic connection was ceased, and immediately another 2D scan was recorded above the Mg disk. The sequence of the two images can be seen in fig. \ref{fig:2d}. Apparently, in the case of galvanic coupling, a 0.1 M Mg$^{2+}$ activity is monitored even in the bulk of the solution, whereas above the center of the disk the activity reaches the implausible 10$^{4}$ M value by using the calibration curve for calculation.   
+In fig. \ref{fig:2d}B the measured values are in the linear range of the ISME, and the overall potential change is several orders of magnitude smaller than in fig. \ref{fig:2d}A. It has to be mentioned that, during the second scan, that was recorded immediately following the electric discconnection of the two metals the lack of electric connection of the galvanic couple and the diffusion of the Mg$^{2+}$ ions can introduce incertainities in the evaluation of the image, yet does not lead to such impossible misinterpretation as fig. \ref{fig:2d}A.
 
 
 \def\s{0.35}
@@ -178,7 +178,7 @@ In fig. \ref{fig:2d}B the measured values are in the linear range of the ISME an
 \centering
 % trim = top left bottom right
 \includegraphics[trim = 10mm 20mm 0mm 10mm, clip, width=\s\textwidth, angle=-90]{17012501.eps}\includegraphics[trim = 10mm 20mm 0mm 10mm, clip, width=\s\textwidth, angle=-90]{17012503_deconvoluted.eps}
-\caption{Caption.}
+\caption{2D Mg$^{2+}$ ion distributions above the AZ63 wire while: (A) galvanically connected to Fe and (B) immediately after ceasing electrical connection between the two metallic materials. Tip-sample distance: 100 $\upmu$m.}
 \label{fig:2d}
 \end{figure}
 
@@ -188,12 +188,9 @@ In fig. \ref{fig:2d}B the measured values are in the linear range of the ISME an
 
 \section{Conclusions}
 
-Experimental evidence has been provided to confirm the suspicion experts in corrosion science has had for a while; the effect of the electric field in certain potentiometric SECM experiments -- where a strong electric field is being formed -- causes a significant over- or underestimation of the real primary ion activity. The reason for this is that the electric field has a direct influence on the measured potential.
+The effect of the electric field in certain potentiometric SECM experiments has been demonstrated experimentally, as suspected by certain researchers in corrosion science for some time. A strong electric field is formed around galvanic coupling of dissimilar metals, that causes significant over- or underestimations of the real primary ion activity. The reason for this feature is that the electric field has a direct influence on the measured potential at the ISME.
 
-Based on the results of this work, this influence should be negated by bringing the reference and measuring electrodes very close together, so the electric field ,,experienced'' by the two is equal, therefore cancels out. Another solution might be to operate an electronic relay as a switch between the galvanic couple, and disconnect them for a very short period of time, while the measurement is performed. These two possible solutions will be subject to investigations in future work of our research group.
-
-
-\section*{Acknowledgements}
+Based on the findings described in this work, this effect should be minimised by bringing the reference and measuring electrodes very close together, so the electric field experienced by the two components is equal, and therefore it cancels out. An alternative solution might involve to operate an electric relay as a switch between the galvanic couple, and disconnect them for a very short period of time, while the measurement is performed. These two possible solutions will be subject of further investigation in our research groups.
 
 \section*{References}
 
