--- a/field.tex
+++ b/field.tex
@@ -192,6 +192,9 @@ The effect of the electric field in certain potentiometric SECM experiments has 
 
 Based on the findings described in this work, this effect should be minimised by bringing the reference and measuring electrodes very close together, so the electric field experienced by the two components is equal, and therefore it cancels out. An alternative solution might involve to operate an electric relay as a switch between the galvanic couple, and disconnect them for a very short period of time, while the measurement is performed. These two possible solutions will be subject of further investigation in our research groups.
 
+%\section{Acknowledgements}
+%The authors would like to thank Dr. Sándor Kunsági-Máté the discussion about the electric field.
+
 \section*{References}
 
 \begin{thebibliography}{5}
