less then a second -> less than a second

--- a/field.tex
+++ b/field.tex
@@ -166,7 +166,7 @@ A series of consecutive Z-approach curves were recorded above the corroding AZ63
 
 
 
-In another series of experiments, the ISME was maintained at a constant height from the metal surface, and its potential was recorded as a function of time, while the galvanic connection was established between the two metals by the operator (fig. \ref{fig:approach}B). Thus, the tip was first positioned 100 $\upmu$m above the center of the AZ63 wire (red curve in fig. \ref{fig:approach}B), and for about 300 s the spontaneous corrosion of the alloy sample was recorded. Then, the galvanic connection was established, and a sharp increase in potential of about 70 mV could be observed. This change would correspond to a two orders of magnitude increase of Mg$^{2+}$ activity in a very short period of time. When the galvanic connection was removed, a potential change of the same magnitude, though opposite direction could be observed. In order to discard the possibility that this rise could be still explained by an abrupt release of Mg$^{2+}$ from the surface, the experiment was repeated while the tip was positioned 1000 $\upmu$m above the target (blue curve in fig. \ref{fig:approach}B). A very similar sequence of potential changes could be observed, despite the big separation between the probe and the corroding sample. Even if one argues a change in Mg$^{2+}$ activity of more than two orders of magnitude is possible 100 $\upmu$m away the source in less then a second, it cannot be the case 1000 $\upmu$m from it. The only plausible explanation is that the abrupt change in the recorded potential is due to the electric field developed between the two metals. 
+In another series of experiments, the ISME was maintained at a constant height from the metal surface, and its potential was recorded as a function of time, while the galvanic connection was established between the two metals by the operator (fig. \ref{fig:approach}B). Thus, the tip was first positioned 100 $\upmu$m above the center of the AZ63 wire (red curve in fig. \ref{fig:approach}B), and for about 300 s the spontaneous corrosion of the alloy sample was recorded. Then, the galvanic connection was established, and a sharp increase in potential of about 70 mV could be observed. This change would correspond to a two orders of magnitude increase of Mg$^{2+}$ activity in a very short period of time. When the galvanic connection was removed, a potential change of the same magnitude, though opposite direction could be observed. In order to discard the possibility that this rise could be still explained by an abrupt release of Mg$^{2+}$ from the surface, the experiment was repeated while the tip was positioned 1000 $\upmu$m above the target (blue curve in fig. \ref{fig:approach}B). A very similar sequence of potential changes could be observed, despite the big separation between the probe and the corroding sample. Even if one argues a change in Mg$^{2+}$ activity of more than two orders of magnitude is possible 100 $\upmu$m away the source in less than a second, it cannot be the case 1000 $\upmu$m from it. The only plausible explanation is that the abrupt change in the recorded potential is due to the electric field developed between the two metals. 
 
 Finally, in order to demonstrate the influence of the electric field on SECM imaging, measurements were made after 30 minutes of galvanic coupling by using a constant 100 $\upmu$m tip-sample distance. 
 Then the galvanic connection was ceased, and immediately another 2D scan was recorded above the Mg disk. The sequence of the two images can be seen in fig. \ref{fig:2d}. Apparently, in the case of galvanic coupling, a 0.1 M Mg$^{2+}$ activity is monitored even in the bulk of the solution, whereas above the center of the disk the activity reaches the implausible 10$^{4}$ M value by using the calibration curve for calculation.   
