--- a/field.tex
+++ b/field.tex
@@ -96,7 +96,7 @@ In this contribution, the effect of the electric field on the measured potential
 
 \section{Material and methods}
 
-The preparation of solid contact $Mg^{2+}$ selective microelectrodes was described in detail before \cite{overmg3}. In brief, micropipettes were pulled from borosilicate capillaries (outer diameter $\oslash$ = 1.5 mm, inner dia. $\oslash$ = 1.0 mm, obtained from Hilgenberg GmbH, Malsfeld, Germany) with a Sutter Instruments P-30 type vertical capillary puller (Novato, CA, USA). The micropipette were soaked in 1:1 H$_2$SO$_4$:H$_2$O$_2$ solution and washed with twice deionized water. The capillaries were next silanized by 1 hour exposition to the saturated vapour of dichloro-dimethyl-silane in closed Petri dishes at 120 $\celsius$. A poly-ethylen-dioxy-thiophene (PEDOT) coated carbon fiber of 33 $\upmu$m diameter (obtained as a generous gift from Specialty Materials, Lowell, MA, USA) served as the solid contact of the ISME. The PEDOT was electrochemically polymerized onto the carbon fiber in 0.1 M EDOT-containing BMIM-PF$_6$ ionic liquid solution. 10 consecutive cyclic voltammetry cycles were run in the -0.9 $\leq$ E $\leq$ 1.3 V potential range. The subsequent doping step was performed in 0.1 M KCl aqueous solution by applying 15 consecutive potential cycles in the -0.9 $\leq$ E $\leq$ 0.8 V range. The membrane components were purchased from Fluka (Buchs, Switzerland). The cocktail contains N,N''-Octamethylene-bis(N'-heptyl-N'-methyl-methylmalonamide inophore, 2-nitrophenyl-octyl ether emollient, PVC, potassium-[tetrakis-4-chlorophenyl]-borate and tetrahydrofuran. Eventually, the micropipette was front-filled with the cocktail, and the PEDOT-coated carbon fiber was inserted in the lumen of the capillary.
+The preparation of solid contact $Mg^{2+}$ selective microelectrodes was described in detail before \cite{overmg3}. In brief, micropipettes were pulled from borosilicate capillaries (outer diameter $\oslash$ = 1.5 mm, inner dia. $\oslash$ = 1.0 mm, obtained from Hilgenberg GmbH, Malsfeld, Germany) with a Sutter Instruments P-30 type vertical capillary puller (Novato, CA, USA). The micropipette were soaked in 1:1 H$_2$SO$_4$:H$_2$O$_2$ solution and washed with twice deionized water. The capillaries were next silanized by 1 hour exposition to the saturated vapour of dichloro-dimethyl-silane in closed Petri dishes at 120 $\celsius$. A poly-ethylen-dioxy-thiophene (PEDOT) coated carbon fiber of 33 $\upmu$m diameter (obtained as a generous gift from Specialty Materials, Lowell, MA, USA) served as the solid contact of the ISME. The PEDOT was electrochemically polymerized onto the carbon fiber in 0.1 M EDOT-containing BMIM-PF$_6$ ionic liquid solution and subsequently doped in 0.1 M KCl aqueous solution. The membrane components were purchased from Fluka (Buchs, Switzerland). The cocktail contains N,N''-Octamethylene-bis(N'-heptyl-N'-methyl-methylmalonamide inophore, 2-nitrophenyl-octyl ether emollient, PVC, potassium-[tetrakis-4-chlorophenyl]-borate and tetrahydrofuran. Eventually, the micropipette was front-filled with the cocktail, and the PEDOT-coated carbon fiber was inserted in the lumen of the capillary.
 The Mg-ISMEs were calibrated by measuring their potential against an Ag/AgCl/KCl (3M) reference electrode in MgCl$_2$ solutions with tenfold increased concentrations between $10^{-7}$ and $10^{-1}$ M. The activities were calculated using the Debye-Hückel approach. A Nernstian relationship was observed between $10^{-1}$ and $10^{-5}$ M; the equation of the linear portion of the calibration curve is E = 29.5 mV/decade + 98.3 mV ($R^2=0.9997$). The lower limit of detection was pMg = 5.3.
 
 The (Mg/Al)/Fe galvanic couple specimen was prepared using the AZ63 Mg/Al alloy and high purity Fe wires of 0.76 mm diameter. The wires were mounted in an epoxy resin sleeve (Struers, Ballerup, Denmark), exposing only the disk shaped surfaces at one side of the mould, and protruding at the rear side allowing to establish electric contact contact. Frontal surface of the mould was first ground with SiC paper up to 4000 grit, then polished with 1.0 and 0.3 $\upmu$m alumina powders.
@@ -170,7 +170,7 @@ In another series of experiments, the ISME was maintained at a constant height f
 
 Finally, in order to demonstrate the influence of the electric field on SECM imaging, measurements were made after 30 minutes of galvanic coupling by using a constant 100 $\upmu$m tip-sample distance. 
 Then the galvanic connection was ceased, and immediately another 2D scan was recorded above the Mg disk. The sequence of the two images can be seen in fig. \ref{fig:2d}. Apparently, in the case of galvanic coupling, a 0.1 M Mg$^{2+}$ activity is monitored even in the bulk of the solution, whereas above the center of the disk the activity reaches the implausible 10$^{4}$ M value by using the calibration curve for calculation.   
-In fig. \ref{fig:2d}B the measured values are in the linear range of the ISME, and the overall potential change is several orders of magnitude smaller than in fig. \ref{fig:2d}A. It has to be mentioned that, during the second scan, that was recorded immediately following the electric discconnection of the two metals the lack of electric connection of the galvanic couple and the diffusion of the Mg$^{2+}$ ions can introduce incertainities in the evaluation of the image, yet does not lead to such impossible misinterpretation as fig. \ref{fig:2d}A.
+In fig. \ref{fig:2d}B the measured values are in the linear range of the ISME, and the overall potential change is several orders of magnitude smaller than in fig. \ref{fig:2d}A.
 
 
 \def\s{0.35}
