--- a/field.tex
+++ b/field.tex
@@ -221,9 +221,9 @@ Development of $Mg^{2+}$ ion-selective microelectrodes for potentiometric scanni
 Journal of the Electrochemical Society  160 (2013) 451-459. 
 \bibitem{belowmg}J. Izquierdo, B. M. Fernández-Pérez, D. Filotás, Z. Őri, A. Kiss, R.T. Martín-Gómez, L. Nagy, G. Nagy, R. M. Souto, Imaging of concentration distributions and hydrogen evolution on corroding magnesium exposed to aqueous environments using scanning electrochemical microscopy, Electroanalysis 28 (2016) 1–14.
 \bibitem{Isaacsfield}H.S. Isaacs, B. Vyas Scanning reference electrode techniques in localized corrosion, in: F. Mansfeld, U. Bertocci (Eds.), Electrochemical Corrosion Testing, ASTM STP 727, American Society for Testing and Materials, Philadelphia PA, 1981, p. 31.
-\bibitem{SRET1}H.N. McMurray, S.R. Magill, B.D. Jeffs, Scanning reference electrode technique as tool for investigating localised corrosion phenomena in galvanised steels, Ironmaking & Steelmaking 23 (1996) 183–188.
+\bibitem{SRET1}H.N. McMurray, S.R. Magill, B.D. Jeffs, Scanning reference electrode technique as tool for investigating localised corrosion phenomena in galvanised steels, Ironmaking \& Steelmaking 23 (1996) 183–188.
 \bibitem{SRET2}V.S. Voruganti, H.B. Luft, D. DeGeer, S.A. Bradford, Scanning reference electrode technique for the investigation of preferential corrosion of weldments in offshore applications, Corrosion 47 (1991) 343–351.
-\bibitem{SRET3}H.S. Isaacs, G. Kissel, Surface preparation and pit propagation in stainless steels, Journal of The Elcetrochemical Society 119 (1972) 1628–1632.
+\bibitem{SRET3}H.S. Isaacs, G. Kissel, Surface preparation and pit propagation in stainless steels, Journal of The Electrochemical Society 119 (1972) 1628–1632.
 \bibitem{SRET4}N. Hsu, J.D. Garber, R. Brunel, R.D. Braun, A scanning reference electrode for use during corrosive measurements, Corrosion 43 (1987) 606–610.
 \bibitem{SVET}H.S. Isaacs, The use of the scanning vibrating electrode technique for detecting defects in ion vapor-deposited aluminum on steel, Corrosion 43 (1987) 594–598.   
 
