--- a/field.tex
+++ b/field.tex
@@ -110,26 +110,26 @@ A series of consecutive Z-approach curves were recorded above the corroding AZ63
 \begin{figure}
 \centering
 \begin{tikzpicture}
-\begin{axis}[ymin=-0.08, ymax=0.08, xmin=0, xmax=1000, xlabel={height, $\upmu$m}, ylabel={E vs. Ag/AgCl/3 M KCl, V}, clip marker paths=true, width=7cm, height=7cm, legend style={draw=none}, legend cell align=left]
-\addplot [domain=0:1000, color=red] table {1.txt};
-\addplot [domain=0:1000, color=red] table {2.txt};
-\addplot [domain=0:1000, color=red] table {3.txt};
-\addplot [domain=0:1000, color=red] table {4.txt};
-\addplot [domain=0:1000, color=red] table {5.txt};
-\addplot [domain=0:1000, color=red] table {6.txt};
-\addplot [domain=0:1000, color=red] table {7.txt};
-\addplot [domain=0:1000, color=blue, dashed] table {8.txt};
-\addplot [domain=0:1000, color=blue, dashed] table {9.txt};
-\addplot [domain=0:1000, color=blue, dashed] table {10.txt};
-\addplot [domain=0:1000, color=blue, dashed] table {11.txt};
-\addplot [domain=0:1000, color=blue, dashed] table {12.txt};
-\addplot [domain=0:1000, color=blue, dashed] table {13.txt};
-\addplot [domain=0:1000, color=green, densely dashdotted] table {14.txt};
-\addplot [domain=0:1000, color=green, densely dashdotted] table {15.txt};
+\begin{axis}[ymin=-80, ymax=80, xmin=0, xmax=1000, xlabel={height, $\upmu$m}, ylabel={E, mV vs Ag/AgCl/ 3M KCl}, clip marker paths=true, width=7cm, height=7cm, legend style={draw=none}, legend cell align=left]
+\addplot [domain=0:1000, color=red, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {1.txt};
+\addplot [domain=0:1000, color=red, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {2.txt};
+\addplot [domain=0:1000, color=red, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {3.txt};
+\addplot [domain=0:1000, color=red, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {4.txt};
+\addplot [domain=0:1000, color=red, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {5.txt};
+\addplot [domain=0:1000, color=red, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {6.txt};
+\addplot [domain=0:1000, color=red, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {7.txt};
+\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {8.txt};
+\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {9.txt};
+\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {10.txt};
+\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {11.txt};
+\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {12.txt};
+\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {13.txt};
+\addplot [domain=0:1000, color=green, densely dashdotted, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {14.txt};
+\addplot [domain=0:1000, color=green, densely dashdotted, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {15.txt};
 \node[anchor=north east] at (rel axis cs:0.98,0.98) {A};
 
-\draw [black, ->] (axis cs:900,-0.05) -- (axis cs:900,-0.025);
-\node[black, left] at (axis cs:900,-0.0375) {$\Delta$E$_1$};
+%\draw [black, ->] (axis cs:900,-0.05) -- (axis cs:900,-0.025);
+%\node[black, left] at (axis cs:900,-0.0375) {$\Delta$E$_1$};
 
 
 %\node[black, above left] at (axis cs:0,-290) {pH 4};
@@ -142,7 +142,7 @@ A series of consecutive Z-approach curves were recorded above the corroding AZ63
 \end{axis}
 \end{tikzpicture}
 \begin{tikzpicture}
-\begin{axis}[ymin=-75, ymax=200, xmin=0, xmax=680, xlabel={time, s}, ylabel={E vs. Ag/AgCl/3 M KCl, mV}, clip marker paths=true, width=7cm, height=7cm, legend style={draw=none}, legend cell align=left]
+\begin{axis}[ymin=-75, ymax=200, xmin=0, xmax=680, xlabel={time, s}, ylabel={E, mV vs Ag/AgCl/ 3M KCl}, clip marker paths=true, width=7cm, height=7cm, legend style={draw=none}, legend cell align=left]
 \addplot [domain=-30:100, color=red, mark=*] table {on_off_100.txt};
 \addplot [domain=-30:100, color=blue, mark=*] table {on_off_1000.txt};
 \node[anchor=north east] at (rel axis cs:0.98,0.98) {B};
