--- a/field.tex
+++ b/field.tex
@@ -37,8 +37,7 @@
 \begin{abstract}
 
 Potentiometric Scanning Electrochemical Microscopy (SECM) is a powerful tool in corrosion science.
-It allows the selective imaging of a particular ionic species released at the anodic sites in a corrosion microcell, by using ion-selective microelectrodes (ISMEs) as scanning probes.
-An often studied process is galvanic corrosion, which involves two dissimilar metals in electrical contact, that are immersed in the same electrolyte phase.
+It allows the selective imaging of a particular ionic species released at the anodic sites in a corrosion microcell, by using ion-selective microelectrodes (ISMEs) as scanning probes. Galvanic corrosion is a particularly often studied process.
 The measured potential of the ISME is thought to depend only on the activity of the primary ion.
 However, an electric field is also formed as a result of the potential difference between the surfaces of the galvanic pair, which has a direct influence on the potential of the sensing microelectrode; the measured potential is the sum of these two contributions.
 The potential difference caused by the electric field can be substantially large, exceeding that of the potential difference associated with the activity of the primary ion.
