--- a/field.tex
+++ b/field.tex
@@ -2,11 +2,11 @@
 \usepackage{ae,aecompl}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
-\usepackage{pgfplots}
-\usepackage{pst-plot}
-\usepackage{tikz}
-\usepgfplotslibrary{external}
-\tikzexternalize
+%\usepackage{pgfplots}
+%\usepackage{pst-plot}
+%\usepackage{tikz}
+%\usepgfplotslibrary{external}
+%\tikzexternalize
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{gensymb}
@@ -108,62 +108,43 @@ A series of consecutive Z-approach curves were recorded above the corroding AZ63
 
 \begin{figure}
 \centering
-\begin{tikzpicture}
-\begin{axis}[ymin=-80, ymax=80, xmin=0, xmax=1000, xlabel={height, $\upmu$m}, ylabel={E, mV vs Ag/AgCl/ 3M KCl}, clip marker paths=true, width=7cm, height=7cm, legend style={draw=none}, legend cell align=left]
-\addplot [domain=0:1000, color=red, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {1.txt};
-\addplot [domain=0:1000, color=red, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {2.txt};
-\addplot [domain=0:1000, color=red, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {3.txt};
-\addplot [domain=0:1000, color=red, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {4.txt};
-\addplot [domain=0:1000, color=red, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {5.txt};
-\addplot [domain=0:1000, color=red, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {6.txt};
-\addplot [domain=0:1000, color=red, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {7.txt};
-\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {8.txt};
-\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {9.txt};
-\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {10.txt};
-\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {11.txt};
-\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {12.txt};
-\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {13.txt};
-\addplot [domain=0:1000, color=green, densely dashdotted, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {14.txt};
-\addplot [domain=0:1000, color=green, densely dashdotted, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {15.txt};
-\node[anchor=north east] at (rel axis cs:0.98,0.98) {A};
-
-%\draw [black, ->] (axis cs:900,-0.05) -- (axis cs:900,-0.025);
-%\node[black, left] at (axis cs:900,-0.0375) {$\Delta$E$_1$};
-
-
-%\node[black, above left] at (axis cs:0,-290) {pH 4};
-%\node[black, above right] at (axis cs:0,-290) {pH 6};
-%\addplot +[mark=none] coordinates {(0, -300)-.- (0, -100)};
-%\draw [dashed, black] (axis cs:0,-300) -- (axis cs:0,-100);
-%\addlegendentry{raw recording}
-%\addlegendentry{$E = - 280 + 97 e^{-t/3.76}$}
-%\addlegendentry{$E = - 280 + 97 (e^{-t/9} + e^{-t/0.5577})/2$}
-\end{axis}
-\end{tikzpicture}
-\begin{tikzpicture}
-\begin{axis}[ymin=-75, ymax=200, xmin=0, xmax=680, xlabel={time, s}, ylabel={E, mV vs Ag/AgCl/ 3M KCl}, clip marker paths=true, width=7cm, height=7cm, legend style={draw=none}, legend cell align=left]
-\addplot [domain=-30:100, color=red, mark=*] table {on_off_100.txt};
-\addplot [domain=-30:100, color=blue, mark=*] table {on_off_1000.txt};
-\node[anchor=north east] at (rel axis cs:0.98,0.98) {B};
-
-\node[red, above right] at (axis cs:40,20) {h = 100 $\upmu$m};
-\node[blue, above right] at (axis cs:40,-50) {h = 1000 $\upmu$m};
-%\addplot +[mark=none] coordinates {(0, -300)-.- (0, -100)};
-\draw [black, ->] (axis cs:320,125) -- (axis cs:320,100);
-\node[black, above] at (axis cs:320,125) {on};
-\draw [black, ->] (axis cs:460,125) -- (axis cs:460,100);
-\node[black, above] at (axis cs:460,125) {off};
-
-%\addlegendentry{raw recording}
-%\addlegendentry{$E = - 280 + 97 e^{-t/3.76}$}
-%\addlegendentry{$E = - 280 + 97 (e^{-t/9} + e^{-t/0.5577})/2$}
-\end{axis}
-\end{tikzpicture}
+\includegraphics[width=0.5\textwidth]{field-figure0.pdf}\includegraphics[width=0.466\textwidth]{field-figure1.pdf}
+%\begin{tikzpicture}
+%\begin{axis}[ymin=-80, ymax=80, xmin=0, xmax=1000, xlabel={height, $\upmu$m}, ylabel={E, mV vs Ag/AgCl/ 3M KCl}, clip marker paths=true, width=7cm, height=7cm, legend style={draw=none}, legend cell align=left]
+%\addplot [domain=0:1000, color=red, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {1.txt};
+%\addplot [domain=0:1000, color=red, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {2.txt};
+%\addplot [domain=0:1000, color=red, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {3.txt};
+%\addplot [domain=0:1000, color=red, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {4.txt};
+%\addplot [domain=0:1000, color=red, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {5.txt};
+%\addplot [domain=0:1000, color=red, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {6.txt};
+%\addplot [domain=0:1000, color=red, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {7.txt};
+%\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {8.txt};
+%\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {9.txt};
+%\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {10.txt};
+%\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {11.txt};
+%\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {12.txt};
+%\addplot [domain=0:1000, color=blue, dashed, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {13.txt};
+%\addplot [domain=0:1000, color=green, densely dashdotted, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {14.txt};
+%\addplot [domain=0:1000, color=green, densely dashdotted, y filter/.code={\pgfmathparse{\pgfmathresult*1000}}] table {15.txt};
+%\node[anchor=north east] at (rel axis cs:0.98,0.98) {A};
+%\end{axis}
+%\end{tikzpicture}
+%\begin{tikzpicture}
+%\begin{axis}[ymin=-75, ymax=200, xmin=0, xmax=680, xlabel={time, s}, ylabel={E, mV vs Ag/AgCl/ 3M KCl}, clip marker paths=true, width=7cm, height=7cm, legend style={draw=none}, legend cell align=left]
+%\addplot [domain=-30:100, color=red, mark=*] table {on_off_100.txt};
+%\addplot [domain=-30:100, color=blue, mark=*] table {on_off_1000.txt};
+%\node[anchor=north east] at (rel axis cs:0.98,0.98) {B};
+%\node[red, above right] at (axis cs:40,20) {h = 100 $\upmu$m};
+%\node[blue, above right] at (axis cs:40,-50) {h = 1000 $\upmu$m};
+%\draw [black, ->] (axis cs:320,125) -- (axis cs:320,100);
+%\node[black, above] at (axis cs:320,125) {on};
+%\draw [black, ->] (axis cs:460,125) -- (axis cs:460,100);
+%\node[black, above] at (axis cs:460,125) {off};
+%\end{axis}
+%\end{tikzpicture}
 \caption{(A) Sequence of consecutive Z-approach curves recorded above the center of the AZ63 wire with a Mg$^{2+}$ ISME. Step size: 10 $\upmu$m. 500 ms settling time was allowed for the potentiometric cell at each points before measurements. Lines in chronological order: solid red = spontaneous corrosion, dashed blue = galvanic corrosion, dash dotted green = spontaneous corrosion. (B) Stationary recordings above the center of the AZ63 target with the ISME placed at: red = 100 $\upmu$m, blue = 1000 $\upmu$m distance from the metal. On/off denote the moment when galvanic coupling was either established or ceased. Temporal resolution was 1 Hz.}
 \label{fig:approach}
 \end{figure}
-
-
 
 In another series of experiments, the ISME was maintained at a constant height from the metal surface, and its potential was recorded as a function of time, while the galvanic connection was established between the two metals by the operator (fig. \ref{fig:approach}B). Thus, the tip was first positioned 100 $\upmu$m above the center of the AZ63 wire (red curve in fig. \ref{fig:approach}B), and for about 300 s the spontaneous corrosion of the alloy sample was recorded. Then, the galvanic connection was established, and a sharp increase in potential of about 70 mV could be observed. This change would correspond to a two orders of magnitude increase of Mg$^{2+}$ activity in a very short period of time. When the galvanic connection was removed, a potential change of the same magnitude, though opposite direction could be observed. In order to discard the possibility that this rise could be still explained by an abrupt release of Mg$^{2+}$ from the surface, the experiment was repeated while the tip was positioned 1000 $\upmu$m above the target (blue curve in fig. \ref{fig:approach}B). A very similar sequence of potential changes could be observed, despite the big separation between the probe and the corroding sample. Even if one argues a change in Mg$^{2+}$ activity of more than two orders of magnitude is possible 100 $\upmu$m away the source in less than a second, it cannot be the case 1000 $\upmu$m from it. The only plausible explanation is that the abrupt change in the recorded potential is due to the electric field developed between the two metals. 
 
