--- a/field.tex
+++ b/field.tex
@@ -93,7 +93,7 @@ Since one could expect that the potential measured by the ISME is solely determi
 
 In this contribution, the effect of the electric field on the measured potential difference at an ion-selective microelectrode probe has been investigated. The galvanic corrosion between an AZ63 Mg-Al alloy and iron was used as model system.
 
-\section{Material and methods}
+\section{Materials and methods}
 
 The preparation of solid contact Mg$^{2+}$ selective microelectrodes was described in detail before \cite{overmg3}. In brief, micropipettes were pulled from borosilicate capillaries (outer diameter $\oslash$ = 1.5 mm, inner dia. $\oslash$ = 1.0 mm, obtained from Hilgenberg GmbH, Malsfeld, Germany) with a Sutter Instruments P-30 type vertical capillary puller (Novato, CA, USA). The capillaries were silanized by 1 hour exposition to the saturated vapour of dichloro-dimethyl-silane at 120 $\celsius$. A poly-ethylen-dioxy-thiophene (PEDOT) coated carbon fiber of 33 $\upmu$m diameter (Specialty Materials, Lowell, MA, USA) served as the solid contact of the ISME. The PEDOT was electrochemically polymerized onto the carbon fiber and subsequently doped in KCl solution. The membrane components were purchased from Fluka (Buchs, Switzerland).
 The Mg-ISMEs were calibrated by measuring their potential against an Ag/AgCl/KCl (3M) reference electrode in MgCl$_2$ solutions with tenfold increased concentrations between $10^{-7}$ and $10^{-1}$ M. The activities were calculated using the Debye-Hückel approach. A Nernstian relationship was observed between $10^{-1}$ and $10^{-5}$ M; the equation of the linear portion of the calibration curve is E = 29.5 mV/decade + 98.3 mV ($R^2=0.9997$). The lower limit of detection was pMg = 5.3.
@@ -146,7 +146,7 @@ A series of consecutive Z-approach curves were recorded above the corroding AZ63
 \label{fig:approach}
 \end{figure}
 
-In another series of experiments, the ISME was maintained at a constant height from the metal surface, and its potential was recorded as a function of time, while the galvanic connection was established between the two metals by the operator (fig. \ref{fig:approach}B). Thus, the tip was first positioned 100 $\upmu$m above the center of the AZ63 wire (red curve in fig. \ref{fig:approach}B), and for about 300 s the spontaneous corrosion of the alloy sample was recorded. Then, the galvanic connection was established, and a sharp increase in potential of about 70 mV could be observed. This change would correspond to a two orders of magnitude increase of Mg$^{2+}$ activity in a very short period of time. When the galvanic connection was removed, a potential change of the same magnitude, though opposite direction could be observed. In order to discard the possibility that this rise could be still explained by an abrupt release of Mg$^{2+}$ from the surface, the experiment was repeated while the tip was positioned 1000 $\upmu$m above the target (blue curve in fig. \ref{fig:approach}B). A very similar sequence of potential changes could be observed, despite the big separation between the probe and the corroding sample. Even if one argues a change in Mg$^{2+}$ activity of more than two orders of magnitude is possible 100 $\upmu$m away the source in less than a second, it cannot be the case 1000 $\upmu$m from it. The only plausible explanation is that the abrupt change in the recorded potential is due to the electric field developed between the two metals. 
+In another series of experiments, the ISME was maintained at a constant height from the metal surface, and its potential was recorded as a function of time, while the galvanic connection was established between the two metals (fig. \ref{fig:approach}B). Thus, the tip was first positioned 100 $\upmu$m above the center of the AZ63 wire (red curve in fig. \ref{fig:approach}B), and for about 300 s the spontaneous corrosion of the alloy sample was recorded. Then, the galvanic connection was established, and a sharp increase in potential of about 70 mV could be observed. This change would correspond to a two orders of magnitude increase of Mg$^{2+}$ activity in a very short period of time. When the galvanic connection was removed, a potential change of the same magnitude, though opposite direction could be observed. In order to discard the possibility that this rise could be still explained by an abrupt release of Mg$^{2+}$ from the surface, the experiment was repeated while the tip was positioned 1000 $\upmu$m above the target (blue curve in fig. \ref{fig:approach}B). A very similar sequence of potential changes could be observed, despite the big separation between the probe and the corroding sample. The only plausible explanation is that the abrupt change in the recorded potential is due to the electric field developed between the two metals. 
 
 Finally, in order to demonstrate the influence of the electric field on SECM imaging, measurements were made after 30 minutes of galvanic coupling by using a constant 100 $\upmu$m tip-sample distance. 
 Then the galvanic connection was ceased, and immediately another 2D scan was recorded above the Mg disk. The sequence of the two images can be seen in fig. \ref{fig:2d}. Apparently, in the case of galvanic coupling, a 0.1 M Mg$^{2+}$ activity is monitored even in the bulk of the solution, whereas above the center of the disk the activity reaches the implausible 10$^{4}$ M value by using the calibration curve for calculation.   
